Fixed incorrect date in change event. Plus refactoring of some absolute paths to use pageContext so deployment to raspberry pi will still work. Also applied style.css to login and signup page. TODO: this makes the logo line out unevenly.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -3,7 +3,7 @@ body {
 
     margin: 0px 0px 0px 0px;
     padding: 0px 0px 0px 0px;
-    background-image: url("wallpaper.jpg");
+    /*background-image: url("wallpaper.jpg");*/
     background-repeat: no-repeat;
     background-color: #ffffff; /* fallback for old browsers */
   /* background: -webkit-linear-gradient(right, #76b852, #8DC26F);
@@ -192,14 +192,14 @@ h1 {
 .masthead {
   height: 100vh;
   min-height: 500px;
-  background-image: url('https://source.unsplash.com/BtbjCFUvBXs/1920x1080');
+  background-image: url('/allenvooreen/images/background.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 
 .nav {
-background-image: url('https://source.unsplash.com/BtbjCFUvBXs/1920x1080');
+background-image: url('/allenvooreen/images/background.jpg');
 }
 
 .navbar-brand {
